# crewai-feature-planning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
knowledge/: user_preference.txt
output/features/: features_1.md  features_2.md  features_3.md  features_4.md
output/tech_specs/: tech_spec_1.md  tech_spec_2.md  tech_spec_3.md  tech_spec_4.md
src/feature_planning/: crew.py  main.py
src/feature_planning/config/: agents.yaml  tasks.yaml
