[project]
name = "feature_planning"
version = "0.1.0"
description = "feature_planning using crewAI"
authors = [{ name = "Lada Semicheva", email = "vlsemicheva@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
feature_planning = "feature_planning.main:run"
run_crew = "feature_planning.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
